<resources>
    <string name="app_name">Debate Helper</string>
    <string name="fragment_members">Members</string>
    <string name="fragment_tables">Tables</string>
    <string name="fragment_prep_timer">Preparation time</string>
    <string name="fragment_debate">Debate</string>
    <string name="fragment_settings">Settings</string>

    <string name="alert_add_member_title">Add member</string>
    <string name="alert_remove_member_title">Are you sure?</string>
    <string name="alert_remove_member">Do you want do remove %s?</string>
    <string name="alert_cannot_draw_title">Cannot continue</string>
    <string name="alert_set_prep_time">Set preparation time</string>
	<string name="alert_recording_filename_title">Type filename</string>
	<string name="alert_recording_stop_title">Do you want to finish recording?</string>

    <string name="text_no_member">New member</string>
    <string name="text_hint_member_name">Name</string>
    <string name="text_member_name_empty_error">Name cannot be empty</string>
    <string name="text_configuration_invalid">Invalid configuration</string>
    <string name="text_ironman">Ironman</string>
    <string name="text_loading">Loading…</string>
    <string name="text_filename_empty">Filename is empty</string>
    <string name="text_filename_busy">Name is busy. File will be overwritten</string>
	<string name="text_recording_storage_error">Cannot save file</string>
	<string name="text_recording_saved">Recording saved: %s</string>
    <string name="text_recording_error">Recording error</string>

    <plurals name="text_too_few_members">
	    <item quantity="one">%d member missing</item>
        <item quantity="other">%d members missing</item>
    </plurals>
    <plurals name="text_too_many_members">
        <item quantity="one">%d member excess</item>
        <item quantity="other">%d members excess</item>
    </plurals>

    <string name="button_prep_timer_start">Start!</string>
    <string name="button_prep_timer_stop">Stop!</string>
    <string name="button_debate_timer_start">Start!</string>
    <string name="button_debate_timer_stop">Stop!</string>
    <string name="button_debate_timer_pause">Pause</string>
    <string name="button_debate_timer_resume">Resume</string>
    <string name="button_debate_recording_enable">Start recording</string>
    <string name="button_debate_recording_disable">Stop recording</string>

    <string name="action_ok">OK</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
	<string name="action_record">Record</string>
	<string name="action_finish">Finish</string>
    <string name="action_cancel">Cancel</string>

    <string name="notification_channel_prep_time_name">Preparation time</string>
    <string name="notification_channel_prep_time_description">Notification about the of the preparation time</string>
	<string name="notification_channel_recorder_name">Debate recording</string>
	<string name="notification_channel_recorder_description">Notification about ongoing sound recording</string>
    <string name="notification_prep_time_end">End of the preparation time!</string>
    <string name="notification_recorder">Debate recording…</string>
	<string name="notification_recorder_description">Click to stop</string>

    <string name="preference_speech_category">Speech</string>
    <string name="preference_speech_duration">Speech duration</string>
    <string name="preference_speech_duration_max">Maximal speech duration</string>
    <string name="preference_poi_start_category">Start of the POI time</string>
    <string name="preference_poi_start_enabled">Bell</string>
    <string name="preference_poi_start">Time</string>
    <string name="preference_poi_end_category">End of the POI time</string>
    <string name="preference_poi_end_enabled">Bell</string>
    <string name="preference_poi_end">Time</string>

    <string name="time_format">%1$02d:%2$02d</string>
    <string name="duration_divider">:</string>

    <string name="table_configuration_4x2">4x2</string>
    <string name="table_configuration_2x3">2x3</string>
    <string name="table_configuration_2x4">2x4</string>

    <string name="table_name_og">OG</string>
    <string name="table_name_oo">OO</string>
    <string name="table_name_cg">CG</string>
    <string name="table_name_co">CO</string>
    <string name="table_name_gov">Gov</string>
    <string name="table_name_opp">Opp</string>
</resources>
