<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:startDestination="@id/membersFragment">

    <fragment
            android:id="@+id/membersFragment"
            android:name="pl.karol202.bphelper.ui.fragment.MembersFragment"
            android:label="@string/fragment_members"
            tools:layout="@layout/fragment_members">

        <action android:id="@+id/toTablesFragment"
                app:destination="@id/tablesFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
            android:id="@+id/tablesFragment"
            android:name="pl.karol202.bphelper.ui.fragment.TablesFragment"
            android:label="@string/fragment_tables"
            tools:layout="@layout/fragment_tables_2"/>

    <fragment
            android:id="@+id/prepTimerFragment"
            android:name="pl.karol202.bphelper.ui.fragment.PrepTimerFragment"
            android:label="@string/fragment_prep_timer"
            tools:layout="@layout/fragment_prep_timer"/>

    <!--<fragment
            android:id="@+id/debateFragment"
            android:name="pl.karol202.bphelper.ui.fragment.DebateFragment"
            android:label="@string/fragment_debate"
            tools:layout="@layout/fragment_debate"/>-->

    <fragment
            android:id="@+id/settingsFragment"
            android:name="pl.karol202.bphelper.ui.settings.SettingsFragment"
            android:label="@string/fragment_settings"/>
</navigation>
