<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:id="@+id/constraintLayout_debate">

    <TextView
            android:id="@+id/text_debate_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_debate_time_toggle"
            style="@style/TextAppearance.MaterialComponents.Headline1"
            android:textColor="?attr/colorAccent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_debate_time_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="6dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/button_debate_recording"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/central_guideline"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_stop_white_24dp"
            android:text="@string/button_debate_timer_stop"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_debate_time_toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/central_guideline"
            app:layout_constraintBottom_toTopOf="@id/button_debate_recording"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_play_white_24dp"
            android:text="@string/button_debate_timer_start"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_debate_recording"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_mic_white_24dp"
            android:text="@string/button_debate_recording_enable"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/central_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>
